Added Connection String

--- a/RestaurantRater/Views/Shared/_Layout.cshtml
+++ b/RestaurantRater/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Restaurant Rater</p>
+            <p>&copy; @DateTime.Now.Year - Restaurant Rater MISSY ELLIOT</p>
         </footer>
     </div>
 
